topichub-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: "" 
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/ 
            backend:
              service:
                name: webforum-service 
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/v1/image/list 
            backend:
              service:
                name: image-service 
                port:
                  number: 8081 
          - pathType: Prefix
            path: /
            backend: 
              service: 
                name: client-service
                port: 
                  number: 5000
          - pathType: Prefix
            path: /admin
            backend: 
              service: 
                name: admin-service
                port: 
                  number: 5001
